# mobile_getewayapi_mobile

./: Acceptor.cpp  Acceptor.h  Channel.cpp  Channel.h  DatabaseHelper.cpp  DatabaseHelper.h  Dockerfile  EchoServer.cpp  EchoServer.h  Epoll.cpp  Epoll.h  EventLoop.cpp  HttpRequest.h  INTERVIEW_GUIDE.md  InetAddress.cpp  README.md  RelayServer.cpp  RelayServer.h  Router.h  Socket.cpp  TcpClient.h  ThreadPool.cpp  Timestamp.h  client_pids.txt  docker-compose.yml  makefile  reactor  reactor.cpp  relay_main.cpp  tcpselect  tcpselect.cpp  test.sh
A_client_app/: CMakeLists.txt  CreateOrderPage.qml  DataSimulator.cpp  DataSimulator.h  LLMService.cpp  LLMService.h  LoginPage.qml  Main.qml  OrderDatabase.cpp  OrderDatabase.h  OrderListPage.qml  OrderModel.cpp  OrderModel.h  TransportPage.qml  main.cpp
A_manger_app/: CMakeLists.txt  Main.qml  ManagerNetwork.cpp  ManagerNetwork.h  MapDashboard.qml  OrderListPage.qml  main.cpp  map.html
reactor_api-main/: .gitignore  Buffer.cpp  Buffer.h  Connection.cpp  Connection.h  EventLoop.h  Filters.h  GatewayServer.cpp  GatewayServer.h  HttpResponse.h  InetAddress.h  README.md  Socket.h  TcpClient.cpp  TcpServer.cpp  TcpServer.h  ThreadPool  ThreadPool.h  Timestamp.cpp  client  client.cpp  makefile  mock_backend.py  test_conn.sh  test_response_time.sh  tmpl.sh
